--- a/Home.css
+++ b/Home.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: url("images/630551_v3.jpg");
+  background-image: url("images/contact.jpg");
   background-position: 50% 50%;
 }
 
